--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,10 @@
             android:textColor="#000000"
             android:textSize="20sp"/>
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
     <Button
         android:id="@+id/submit_btn"
         android:layout_width="wrap_content"
@@ -82,6 +85,20 @@
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/next_button"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@color/colorPrimary"
+            android:onClick="nextButtonPressed"
+            android:text="NEXT"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
     <RadioGroup
         android:id="@+id/tmnt_radio_group"
         android:layout_marginTop="20dp"
